; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_PV_KERN_ALLOC.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm/extr_pmap.c_PV_KERN_ALLOC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_5__* }

@PV_ENTRY_NULL = common dso_local global %struct.TYPE_5__* null, align 8
@pv_kern_free_list_lock = common dso_local global i32 0, align 4
@pv_kern_free_list = common dso_local global %struct.TYPE_5__* null, align 8
@pv_kern_free_count = common dso_local global i32 0, align 4
@pmap_kern_reserve_alloc_stat = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__**)* @PV_KERN_ALLOC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @PV_KERN_ALLOC(%struct.TYPE_5__** %0) #0 {
  %2 = alloca %struct.TYPE_5__**, align 8
  store %struct.TYPE_5__** %0, %struct.TYPE_5__*** %2, align 8
  %3 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** @PV_ENTRY_NULL, align 8
  %6 = icmp eq %struct.TYPE_5__* %4, %5
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = call i32 @pmap_simple_lock(i32* @pv_kern_free_list_lock)
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @pv_kern_free_list, align 8
  %11 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %2, align 8
  store %struct.TYPE_5__* %10, %struct.TYPE_5__** %11, align 8
  %12 = icmp ne %struct.TYPE_5__* %10, null
  br i1 %12, label %13, label %26

13:                                               ; preds = %1
  %14 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %2, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %16, align 8
  store %struct.TYPE_5__* %17, %struct.TYPE_5__** @pv_kern_free_list, align 8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** @PV_ENTRY_NULL, align 8
  %19 = load %struct.TYPE_5__**, %struct.TYPE_5__*** %2, align 8
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  store %struct.TYPE_5__* %18, %struct.TYPE_5__** %21, align 8
  %22 = load i32, i32* @pv_kern_free_count, align 4
  %23 = add nsw i32 %22, -1
  store i32 %23, i32* @pv_kern_free_count, align 4
  %24 = load i32, i32* @pmap_kern_reserve_alloc_stat, align 4
  %25 = add nsw i32 %24, 1
  store i32 %25, i32* @pmap_kern_reserve_alloc_stat, align 4
  br label %26

26:                                               ; preds = %13, %1
  %27 = call i32 @pmap_simple_unlock(i32* @pv_kern_free_list_lock)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @pmap_simple_lock(i32*) #1

declare dso_local i32 @pmap_simple_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
